Default back to CMS for Java GC